# downloader-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml  version_incrementer.py
src/downloader_cli/: __init__.py  main.py
src/downloader_cli/commands/: __init__.py  generate_playlist.py  mpv.py  podman_run.py  serve_watch_playlist.py  ytdlp.py
src/downloader_cli/utils/: __init__.py  config.py  network.py
