[project]
name = "downloader-cli"
version = "1.34.0"
description = "Downloader CLI"
dependencies = [
    "typer>=0.9.0",
    "pyaml>=5.3",
    "toml>=0.10.0",
    "prompt-toolkit>=3.0.0",
    "ipaddress>=1.0.22",
    "requests>=2.25.0",
    "watchdog>=5.0.0",
    "aiofiles>=24.1.0",
    "starlette>=0.38.2",
    "uvicorn>=0.30.6",
    "fastapi>=0.112.2",
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
[[project.authors]]
name = "tadeasf"
email = "taddy.fort@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
downloader = "downloader_cli.main:app"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts.build]
cmd = [ "sh", "-c", "rye sync && rye build && python version_incrementer.py && podman build -t downloader-cli .",]

[tool.rye.scripts.install]
cmd = [ "pip", "install", "-e", ".",]

[tool.hatch.build.targets.wheel]
packages = [ "src/downloader_cli",]
